--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/index.js": {
-      "runtime": "node20.x"
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
