--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+  "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "@vercel/node@20.x"
+      "runtime": "vercel/node@20.x"
     }
   },
   "rewrites": [
