--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "vercel/node@20.x"
+      "runtime": "@vercel/node@20.15.0"
     }
   },
   "rewrites": [
