--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "@vercel/node@20"
+      "runtime": "now-node@1.0.0"
     }
   },
   "rewrites": [
