--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "functions": {
+    "api/index.js": { }
+  },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" }
   ]
