--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "functions": {
-    "api/index.js": { "includeFiles": [] }
+    "api/index.js": { "includeFiles": "", "memory": 1024 }
   },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" }
