--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://smirkymyjens:Kierrakaleb1@soundmapdb.3ir56d5.mongodb.net/
+MONGODB_URI=mongodb+srv://smirkymyjens:Kierrakaleb1@soundmapdb.3ir56d5.mongodb.net/?retryWrites=true&w=majority&appName=SoundmapDB
