--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://smirkymyjens:PASSWORD@soundmapdb.3ir56d5.mongodb.net/SoundmapDB?retryWrites=true&w=majority&appName=SoundmapDB
+MONGODB_URI=mongodb+srv://smirkymyjens:Kierrakaleb1@soundmapdb.3ir56d5.mongodb.net/SoundmapDB?retryWrites=true&w=majority&appName=SoundmapDB
